--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="PC・スマートフォンに新しいエンターテイメントをプラスします。">
     <title>kami AppliKations home</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -15,7 +16,7 @@
   <body>
     <div style="text-align:center; background-color:gray; ">
       <h1 style="margin:0; padding:10px;">Kami's AppliKationS</h1>
-      <h3 style=margin:0;><a href="https://kamitetsuyuki.github.io">please access https://kamitetsuyuki.github.io</a></h3>
+      <h3 style=margin:0;><a href="https://github.com/kamitetsuyuki">please access https://kamitetsuyuki.github.io</a></h3>
     </div>
     <div style="text-align:center; background-color:skyblue; ">
       <h3 style="margin:0; padding: 5px">プロフィール</h3>
@@ -54,25 +55,25 @@
     </div>
     
     <div class="row" style="background-color:gray;" >
-     <div class="col-sm-6" style="text-align:center;">
-     <h3>お問い合わせ</h3>
-     <form action="" method="post">
-       <input type="hidden" value="secret_data">
-       <label>名前：<input type="text" name="login_name"></label><br>
-       <label>メールアドレス：<input type="text" name="email"></label><br>
-       <p>関心を持ったアプリ</p>
-       <label>app1<input type="checkbox" name="hobby" value="1"></label>
-       <label>app2<input type="checkbox" name="hobby" value="2"></label>
-       <label>app3<input type="checkbox" name="hobby" value="3"></label>
-       <label>app4<input type="checkbox" name="hobby" value="4"></label>
-     </div>
-     <div class="col-sm-6" style="text-align:center;">
-      <p>お問い合わせ内容を400字以内で記述してください。</p>
-      <textarea name="opinion" cols="40" rows="10" maxlength="400"
+      <div class="col-sm-6" style="text-align:center;">
+       <h3>お問い合わせ</h3>
+       <form method="post">
+        <input type="hidden" value="secret_data">
+        <label>名前：<input type="text" name="login_name"></label><br>
+        <label>メールアドレス：<input type="text" name="email"></label><br>
+        <p>関心を持ったアプリ</p>
+        <label>app1<input type="checkbox" name="hobby" value="1"></label>
+        <label>app2<input type="checkbox" name="hobby" value="2"></label>
+        <label>app3<input type="checkbox" name="hobby" value="3"></label>
+        <label>app4<input type="checkbox" name="hobby" value="4"></label>
+        <div class="col-sm-6" style="text-align:center;">
+        <p>お問い合わせ内容を400字以内で記述してください。</p>
+        <textarea name="opinion" cols="40" rows="10" maxlength="400"
         placeholder="ご意見を入力してください。"></textarea>
-     <input type="submit" value="送信" style="margin:0;">
+       <input type="submit" value="送信" style="margin:0;">
+       </div>
+     </form>
      </div>
     </div>
-     </form>
   </body>
 </html>
