--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="row" style="background-color:gray;" >
       <div class="col-sm-6" style="text-align:center;">
         <h3>お問い合わせ</h3>
-         <form method="post">
+         <form method="post" action="mailto:yoohooism@gmail.com?subject=TESTMAIL">>
            <input type="hidden" value="secret_data">
            <label>名前：<input type="text" name="login_name"></label><br>
            <label>メールアドレス：<input type="text" name="email"></label><br>
@@ -66,14 +66,15 @@
            <label>app2<input type="checkbox" name="hobby" value="2"></label>
            <label>app3<input type="checkbox" name="hobby" value="3"></label>
            <label>app4<input type="checkbox" name="hobby" value="4"></label>
-        </form>
       </div>
+      
       <div class="col-sm-6" style="text-align:center;">
         <p>お問い合わせ内容を400字以内で記述してください。</p>
         <textarea name="opinion" cols="40" rows="10" maxlength="400"
         placeholder="ご意見を入力してください。"></textarea>
         <input type="submit" value="送信" style="margin:0;">
       </div>
+      </form>
     </div>
   </body>
 </html>
