--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="row" style="background-color:gray;" >
       <div class="col-sm-6" style="text-align:center;">
         <h3>お問い合わせ</h3>
-         <form method="post" action="mailto:yoohooism@gmail.com?subject=TESTMAIL">>
+         <form method="post" action="mailto:yoohooism@gmail.com?subject=TESTMAIL">
            <input type="hidden" value="secret_data">
            <label>名前：<input type="text" name="login_name"></label><br>
            <label>メールアドレス：<input type="text" name="email"></label><br>
