--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     
     <div class="row" style="background-color:gray;" >
       <div class="col-sm-6" style="text-align:center;">
-        <h3>お問い合わせ</h3>
-         <form method="post" action="mailto:yoohooism@gmail.com?subject=TESTMAIL">
+       <h3>お問い合わせ</h3>
+         <form method="post" action="mailto:yoohooism@gmail.com?subject=お問い合わせ">
            <input type="hidden" value="secret_data">
            <label>名前：<input type="text" name="login_name"></label><br>
            <label>メールアドレス：<input type="text" name="email"></label><br>
